--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyApp</string>
+    <string name="mensaje_login_ok">Las credenciales son correctas</string>
+    <string name="mensaje_login_wrong">Usuario o password incorrecto</string>
 </resources>
